button & Right side's OverFlow fixed

--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
-body main{
-    font-family: 'Poppins', sans-serif;
+html,body,main{
+    width: 100wv;
+    height: 100hv;
     margin: 0px;
     padding: 0px;
-    height: 100%;
-    width: 100%;
     background: #ffffff;
+    overflow-x: hidden; 
+    font-family: 'Poppins', sans-serif;
 }
-
 .container{
     margin-bottom:40px ;
 }
@@ -51,6 +51,10 @@ body main{
 .deck-btn:hover, .GetStarted:hover, .allButton:hover, .signIn:hover{
     cursor: pointer;
     transform: scale(1.1);
+}
+.deck-btn:focus, .GetStarted:focus, .allButton:focus, .signIn:focus{
+    outline: none;
+    box-shadow: none;
 }
 
 .GetStarted{
@@ -185,6 +189,8 @@ header{
     color: #413960;
     margin-bottom: 20px;
 }
+
+
 .decks{
     padding: 24px 20px ;
     background: #FFFFFF;
